--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap-icons": "^1.8.0",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0"
+    "csv": "^6.0.5",
+    "dayjs": "^1.10.7",
+    "floating-vue": "^2.0.0-beta.5",
+    "svg-url-loader": "^7.1.1",
+    "vue": "^3.2.29"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
