--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap-icons": "^1.8.0",
     "csv-parse": "^5.0.4",
     "dayjs": "^1.10.7",
+    "floating-vue": "^2.0.0-beta.5",
     "vue": "^3.2.25",
     "vuex": "^4.0.2"
   },
@@ -22,6 +23,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-vue": "^8.4.1",
     "prettier": "2.5.1",
+    "sass": "^1.49.7",
     "vite": "^2.7.2"
   }
 }
