--- a/package.json
+++ b/package.json
@@ -25,5 +25,10 @@
     "prettier": "2.5.1",
     "sass": "^1.49.7",
     "vite": "^2.7.2"
+  },
+  "eslintConfig": {
+    "env": {
+      "node": true
+    }
   }
 }
