--- a/.github/workflows/build.node.js.yml
+++ b/.github/workflows/build.node.js.yml
@@ -5,19 +5,17 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ release ]
+    branches: release
   pull_request:
-    branches: [ release ]
+    branches: release
   workflow_dispatch:
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
-
+    runs-on: Windows-latest
     strategy:
       matrix:
-        node-version: [16.x]
+        node-version: [14.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
