--- a/.github/workflows/build.node.js.yml
+++ b/.github/workflows/build.node.js.yml
@@ -29,3 +29,33 @@ jobs:
     - run: npm ci
     - run: npm run build
     - run: npm test
+    - run: t tar -cf dist.zip dist
+
+    - name: CreateRelease
+      uses: actions/create-release@v1
+      id: create_release
+      with:
+        draft: false
+        prerelease: false
+        release_name: Latest
+        tag_name: Latest
+        body: Release Latest
+      env:
+        GITHUB_TOKEN: ${{ github.token }}
+
+   - name: UploadAssets
+      uses: actions/upload-release-asset@v1
+      env:
+          GITHUB_TOKEN: ${{ github.token }}
+      with:
+         upload_url: ${{ steps.create_release.outputs.upload_url }}
+         asset_path: dist.zip
+         asset_name: dist.zip
+         asset_content_type: application/zip
+
+
+  # deploy:
+  #   runs-on: [self-hosted,linux,X64,hk]
+  #   needs: build
+  #   steps:
+  #   - run: wget 
