--- a/.github/workflows/delete-release.yml
+++ b/.github/workflows/delete-release.yml
@@ -22,7 +22,7 @@ jobs:
     - uses: dev-drprasad/delete-tag-and-release@v0.2.0
       with:
         delete_release: true # default: false
-        tag_name: v0.1.0 # tag name to delete
-        repo: <owner>/<repoName> # target repo (optional). defaults to repo running this action
+        tag_name: Latest # tag name to delete
+        repo:  # target repo (optional). defaults to repo running this action
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
