--- a/.github/workflows/build.node.js.yml
+++ b/.github/workflows/build.node.js.yml
@@ -45,9 +45,9 @@ jobs:
       with:
         draft: false
         prerelease: false
-        release_name: build_${{ env.Version }}
-        tag_name: ${{ env.Version }}
-        body: Release build zip for ${{ env.Version }}
+        release_name: build_${{ github.ref }}
+        tag_name: ${{ github.ref }}
+        body: Release build zip for ${{ github.ref }}
       env:
         GITHUB_TOKEN: ${{ github.token }}
 
@@ -58,5 +58,5 @@ jobs:
       with:
          upload_url: ${{ steps.create_release.outputs.upload_url }}
          asset_path: dist.zip
-         asset_name: dist${{ env.Version }}.zip
+         asset_name: dist.zip
          asset_content_type: application/zip
