--- a/.github/workflows/build.node.js.yml
+++ b/.github/workflows/build.node.js.yml
@@ -1,19 +1,15 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Release Branch Node.js CI Build Frontend
+name: Node.js CI Build Frontend
 
 
 on:
-  push:
-    branches: [release]
-  pull_request:
-    branches: [release]
   workflow_dispatch:
 
 jobs:
   build:
-    runs-on: Windows-latest
+    runs-on: Ubuntu-latest
     strategy:
       matrix:
         node-version: [14.x]
@@ -21,17 +17,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Get Time
-      id: time
-      uses: nanzm/get-time-action@v1.1
-      with:
-         timeZone: 8
-         format: 'YYYY-MM-DD-HH-mm-ss'
-    - name: Usage
-      env:
-        TIME: "${{ steps.time.outputs.time }}"
-      run: |
-        echo $TIME
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
       with:
@@ -43,24 +28,24 @@ jobs:
     - name: Use tar to zip dist files
       run: tar -cf dist.zip dist
 
-    - name: Create new release
-      uses: actions/create-release@v1
-      id: create_release
-      with:
-        draft: false
-        prerelease: false
-        release_name: build_$TIME
-        tag_name: $TIME
-        body: Release build zip for $TIME
-      env:
-        GITHUB_TOKEN: ${{ github.token }}
+#     - name: Create new release
+#       uses: actions/create-release@v1
+#       id: create_release
+#       with:
+#         draft: false
+#         prerelease: false
+#         release_name: build_$TIME
+#         tag_name: $TIME
+#         body: Release build zip for $TIME
+#       env:
+#         GITHUB_TOKEN: ${{ github.token }}
 
-    - name: Upload assets
-      uses: actions/upload-release-asset@v1
-      env:
-          GITHUB_TOKEN: ${{ github.token }}
-      with:
-         upload_url: ${{ steps.create_release.outputs.upload_url }}
-         asset_path: dist.zip
-         asset_name: dist.zip
-         asset_content_type: application/zip
+#     - name: Upload assets
+#       uses: actions/upload-release-asset@v1
+#       env:
+#           GITHUB_TOKEN: ${{ github.token }}
+#       with:
+#          upload_url: ${{ steps.create_release.outputs.upload_url }}
+#          asset_path: dist.zip
+#          asset_name: dist.zip
+#          asset_content_type: application/zip
