--- a/.github/workflows/build.node.js.yml
+++ b/.github/workflows/build.node.js.yml
@@ -22,7 +22,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: ll ./src/styles/
+    - run: ls -a ./src/styles/
     - run: npm ci
     - run: npm run build
     - run: npm test
