--- a/.github/workflows/build.node.js.yml
+++ b/.github/workflows/build.node.js.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Node.js CI Build Frontend
+name: Node.js CI Build
 
 
 on:
@@ -26,8 +26,19 @@ jobs:
     - run: npm ci
     - run: npm run build
     - run: npm test
-    - name: Use tar to zip dist files
-      run: tar -cf dist.zip dist
+    - name: Install SSH Key
+      uses: shimataro/ssh-key-action@v2
+      with:
+        key: ${{ secrets.HK_CMI_SSH_PRIVATE_KEY }}
+        known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
+    - name: Adding Known Hosts
+      run: ssh-keyscan -H ${{ secrets.HK_CMI_SSH_HOST_IP }} >> ~/.ssh/known_hosts
+    - name: Deploy with rsync
+      run: rsync -avz ./dist/ ${{ secrets.SSH_USER }}@${{ secrets.HK_CMI_SSH_HOST_IP }}:/www/wwwroot/dev.music.a-soul.fans/dist/
+
+
+    # - name: Use tar to zip dist files
+    #   run: tar -cf dist.zip dist
 
 #     - name: Create new release
 #       uses: actions/create-release@v1
