--- a/.github/workflows/build.node.js.yml
+++ b/.github/workflows/build.node.js.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build:
-    runs-on: Ubuntu-latest
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         node-version: [14.x]
@@ -23,9 +23,13 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: ls -a ./src/styles/
+    - run: mv ./src/styles/SongFilter.scss ./src/styles/songfilter.scss && mv ./src/styles/SongListPagination.scss ./src/styles/songListpagination.scss
+    - run: ls -a ./src/styles/
+
     - run: npm ci
     - run: npm run build
     - run: npm test
+
     - name: Install SSH Key
       uses: shimataro/ssh-key-action@v2
       with:
