--- a/.github/workflows/build.node.js.yml
+++ b/.github/workflows/build.node.js.yml
@@ -25,19 +25,19 @@ jobs:
 #     - run: mv ./src/styles/SongFilter.scss ./src/styles/songfilter.scss && mv ./src/styles/SongListPagination.scss ./src/styles/songListpagination.scss
 #     - run: ls -a ./src/styles/
 
-    - run: npm ci
-    - run: npm run build
-    - run: npm test
+#     - run: npm ci
+#     - run: npm run build
+#     - run: npm test
 
-    - name: Install SSH Key
-      uses: shimataro/ssh-key-action@v2
-      with:
-        key: ${{ secrets.HK_CMI_SSH_PRIVATE_KEY }}
-        known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
-    - name: Adding Known Hosts
-      run: ssh-keyscan -H ${{ secrets.HK_CMI_SSH_HOST_IP }} >> ~/.ssh/known_hosts
-    - name: Deploy with rsync
-      run: rsync -avz ./dist/ ${{ secrets.SSH_USER }}@${{ secrets.HK_CMI_SSH_HOST_IP }}:/www/wwwroot/dev.music.a-soul.fans/dist/
+#     - name: Install SSH Key
+#       uses: shimataro/ssh-key-action@v2
+#       with:
+#         key: ${{ secrets.HK_CMI_SSH_PRIVATE_KEY }}
+#         known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
+#     - name: Adding Known Hosts
+#       run: ssh-keyscan -H ${{ secrets.HK_CMI_SSH_HOST_IP }} >> ~/.ssh/known_hosts
+#     - name: Deploy with rsync
+#       run: rsync -avz ./dist/ ${{ secrets.SSH_USER }}@${{ secrets.HK_CMI_SSH_HOST_IP }}:/www/wwwroot/dev.music.a-soul.fans/dist/
 
 
     # - name: Use tar to zip dist files
