--- a/.github/workflows/build.node.js.yml
+++ b/.github/workflows/build.node.js.yml
@@ -25,9 +25,9 @@ jobs:
 #     - run: mv ./src/styles/SongFilter.scss ./src/styles/songfilter.scss && mv ./src/styles/SongListPagination.scss ./src/styles/songListpagination.scss
 #     - run: ls -a ./src/styles/
 
-#     - run: npm ci
-#     - run: npm run build
-#     - run: npm test
+    - run: npm ci
+    - run: npm run build
+    - run: npm test
 
 #     - name: Install SSH Key
 #       uses: shimataro/ssh-key-action@v2
