--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "dayjs": "^1.10.7",
     "floating-vue": "^2.0.0-beta.6",
     "lodash": "^4.17.21",
-    "vue": "^3.2.31",
-    "vuex": "^4.0.2"
+    "vue": "^3.2.31"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.2",
@@ -25,7 +24,7 @@
     "eslint-plugin-vue": "^8.5.0",
     "prettier": "2.5.1",
     "sass": "^1.49.8",
-    "vite": "^2.7.13",
+    "vite": "^2.8.4",
     "vue3-eventbus": "^2.0.0"
   }
 }
