--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap-icons": "^1.8.1",
     "csv-parse": "^5.0.4",
     "dayjs": "^1.10.7",
+    "dexie": "^3.2.1",
     "floating-vue": "^2.0.0-beta.6",
     "lodash": "^4.17.21",
     "vue": "^3.2.31"
