--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-config-prettier": "^8.4.0",
     "eslint-plugin-vue": "^8.5.0",
     "prettier": "2.5.1",
+    "rollup-plugin-visualizer": "^5.6.0",
     "sass": "^1.49.8",
     "vite": "^2.8.4",
     "vue3-eventbus": "^2.0.0"
