--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "axios": "^0.26.0",
         "bootstrap-icons": "^1.8.1",
         "csv-parse": "^5.0.4",
-        "dayjs": "^1.10.7",
+        "darkreader": "^4.9.44",
+        "dayjs": "^1.10.8",
         "dexie": "^3.2.1",
         "floating-vue": "^2.0.0-beta.6",
         "lodash": "^4.17.21",
@@ -22,14 +23,14 @@
         "vuedraggable": "^4.1.0"
     },
     "devDependencies": {
-        "@vitejs/plugin-vue": "^2.2.2",
+        "@vitejs/plugin-vue": "^2.2.4",
         "eslint": "^8.10.0",
-        "eslint-config-prettier": "^8.4.0",
+        "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-vue": "^8.5.0",
         "prettier": "2.5.1",
         "rollup-plugin-visualizer": "^5.6.0",
         "sass": "^1.49.9",
-        "vite": "^2.8.4",
+        "vite": "^2.8.6",
         "vue3-eventbus": "^2.0.0"
     }
 }
