--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "dayjs": "^1.10.8",
         "dexie": "^3.2.1",
         "floating-vue": "^2.0.0-beta.6",
-        "lodash": "^4.17.21",
+        "lodash.shuffle": "^4.2.0",
         "vue": "^3.2.31",
         "vuedraggable": "^4.1.0"
     },
