add support for resource location switch in funtion bar

--- a/.env.development
+++ b/.env.development
@@ -13,3 +13,15 @@ VITE_SUFFIX_ORIGN_DL_CDN=".mp3?raw&proxied"
 # # # 修正音频
 VITE_PREFIX_TUNED_DL_CDN="/remotetuned/"
 VITE_SUFFIX_TUNED_DL_CDN=".mp3?raw&proxied"
+
+# 国内资源
+# # 直链配置
+# # # 原版音频
+VITE_PREFIX_ORIGN_CH="http://as-archive-cn-01.a-soul.fans/"
+# # # 修正音频
+VITE_PREFIX_TUNED_CH="http://as-archive-cn-01.a-soul.fans/%E4%BF%AE%E5%A4%8D%E6%96%87%E7%89%A9/"
+# # 代理配置
+# # # 原版音频
+VITE_PREFIX_ORIGN_DL_CDN_CH="https://as-archive-cn-01.a-soul.fans/"
+# # # 修正音频
+VITE_PREFIX_TUNED_DL_CDN_CH="https://as-archive-cn-01.a-soul.fans/%E4%BF%AE%E5%A4%8D%E6%96%87%E7%89%A9/"
