--- a/.env.production
+++ b/.env.production
@@ -1,15 +1,30 @@
 # 音频资源前后缀配置
+
+# 海外资源
 # # 直链配置
 # # # 原版音频
-VITE_PREFIX_ORIGN="https://as-archive-load-balance.kzmidc.workers.dev/Normalized%20Audio/"
+VITE_PREFIX_ORIGN="http://as-archive-load-balance.kzmidc.workers.dev/"
 VITE_SUFFIX_ORIGN=".mp3?raw"
 # # # 修正音频
-VITE_PREFIX_TUNED="https://as-archive-load-balance.kzmidc.workers.dev/Normalized%20Audio/%E4%BF%AE%E5%A4%8D%E6%96%87%E7%89%A9/"
+VITE_PREFIX_TUNED="http://as-archive-load-balance.kzmidc.workers.dev/%E4%BF%AE%E5%A4%8D%E6%96%87%E7%89%A9/"
 VITE_SUFFIX_TUNED=".mp3?raw"
 # # 代理配置
 # # # 原版音频
-VITE_PREFIX_ORIGN_DL_CDN="https://as-archive-load-balance.kzmidc.workers.dev/Normalized%20Audio/"
+VITE_PREFIX_ORIGN_DL_CDN="https://as-archive-load-balance.kzmidc.workers.dev/"
 VITE_SUFFIX_ORIGN_DL_CDN=".mp3?raw&proxied"
 # # # 修正音频
-VITE_PREFIX_TUNED_DL_CDN="https://as-archive-load-balance.kzmidc.workers.dev/Normalized%20Audio/%E4%BF%AE%E5%A4%8D%E6%96%87%E7%89%A9/"
+VITE_PREFIX_TUNED_DL_CDN="https://as-archive-load-balance.kzmidc.workers.dev/%E4%BF%AE%E5%A4%8D%E6%96%87%E7%89%A9/"
 VITE_SUFFIX_TUNED_DL_CDN=".mp3?raw&proxied"
+
+
+# 国内资源
+# # 直链配置
+# # # 原版音频
+VITE_PREFIX_ORIGN_CH="http://as-archive-cn-01.a-soul.fans/"
+# # # 修正音频
+VITE_PREFIX_TUNED_CH="http://as-archive-cn-01.a-soul.fans/%E4%BF%AE%E5%A4%8D%E6%96%87%E7%89%A9/"
+# # 代理配置
+# # # 原版音频
+VITE_PREFIX_ORIGN_DL_CDN_CH="https://as-archive-cn-01.a-soul.fans/"
+# # # 修正音频
+VITE_PREFIX_TUNED_DL_CDN_CH="https://as-archive-cn-01.a-soul.fans/%E4%BF%AE%E5%A4%8D%E6%96%87%E7%89%A9/"
