--- a/.env.production
+++ b/.env.production
@@ -25,6 +25,6 @@ VITE_PREFIX_ORIGN_CH="http://as-archive-cn-01.a-soul.fans/"
 VITE_PREFIX_TUNED_CH="http://as-archive-cn-01.a-soul.fans/%E4%BF%AE%E5%A4%8D%E6%96%87%E7%89%A9/"
 # # 代理配置
 # # # 原版音频
-VITE_PREFIX_ORIGN_DL_CDN_CH="https://as-archive-cn-01.a-soul.fans/"
+VITE_PREFIX_ORIGN_DL_CDN_CH="https://as-archive-load-balance.kzmidc.workers.dev/"
 # # # 修正音频
-VITE_PREFIX_TUNED_DL_CDN_CH="https://as-archive-cn-01.a-soul.fans/%E4%BF%AE%E5%A4%8D%E6%96%87%E7%89%A9/"
+VITE_PREFIX_TUNED_DL_CDN_CH="https://as-archive-load-balance.kzmidc.workers.dev/%E4%BF%AE%E5%A4%8D%E6%96%87%E7%89%A9/"
