--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "@vueuse/core": "^7.7.0",
         "axios": "^0.26.0",
+        "body-scroll-lock": "^4.0.0-beta.0",
         "bootstrap-icons": "^1.8.1",
         "csv-parse": "^5.0.4",
         "darkreader": "^4.9.44",
