--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "dexie": "^3.2.1",
         "floating-vue": "^2.0.0-beta.6",
         "lodash.shuffle": "^4.2.0",
+        "tua-body-scroll-lock": "^1.2.1",
         "vue": "^3.2.31",
         "vuedraggable": "^4.1.0"
     },
