--- a/.env.production
+++ b/.env.production
@@ -3,10 +3,10 @@
 # 海外资源
 # # 直链配置
 # # # 原版音频
-VITE_PREFIX_ORIGN="http://as-archive-load-balance.kzmidc.workers.dev/Normalized%20Audio/"
+VITE_PREFIX_ORIGN="https://as-archive-load-balance.kzmidc.workers.dev/Normalized%20Audio/"
 VITE_SUFFIX_ORIGN="?raw"
 # # # 修正音频
-VITE_PREFIX_TUNED="http://as-archive-load-balance.kzmidc.workers.dev/Normalized%20Audio/%E4%BF%AE%E5%A4%8D%E6%96%87%E7%89%A9/"
+VITE_PREFIX_TUNED="https://as-archive-load-balance.kzmidc.workers.dev/Normalized%20Audio/%E4%BF%AE%E5%A4%8D%E6%96%87%E7%89%A9/"
 VITE_SUFFIX_TUNED="?raw"
 # # 代理配置
 # # # 原版音频
@@ -20,10 +20,10 @@ VITE_SUFFIX_TUNED_DL_CDN="?raw&proxied"
 # 国内资源
 # # 直链配置
 # # # 原版音频
-VITE_PREFIX_ORIGN_CH="http://as-archive-cn-01.a-soul.fans/"
+VITE_PREFIX_ORIGN_CH="https://as-archive-cn-01.a-soul.fans/"
 VITE_SUFFIX_ORIGN_CH="?raw"
 # # # 修正音频
-VITE_PREFIX_TUNED_CH="http://as-archive-cn-01.a-soul.fans/%E4%BF%AE%E5%A4%8D%E6%96%87%E7%89%A9/"
+VITE_PREFIX_TUNED_CH="https://as-archive-cn-01.a-soul.fans/%E4%BF%AE%E5%A4%8D%E6%96%87%E7%89%A9/"
 VITE_SUFFIX_TUNED_CH="?raw"
 # # 代理配置
 # # # 原版音频
