--- a/.env.development
+++ b/.env.development
@@ -1,10 +1,10 @@
 # 音频资源前后缀配置
 # # 直链配置
 # # # 原版音频
-VITE_PREFIX_ORIGN="https://asoul1.asoul-rec.com/%E6%AD%8C%E8%88%9E%E5%88%87%E7%89%87/MP3%E7%9B%B4%E6%92%AD%E6%AD%8C%E6%9B%B2%E5%88%87%E7%89%87/"
+VITE_PREFIX_ORIGN="https://as-archive-load-balance.kzmidc.workers.dev/Normalized%20Audio%20New/"
 VITE_SUFFIX_ORIGN="?raw"
 # # # 修正音频
-VITE_PREFIX_TUNED="https://asoul1.asoul-rec.com/%E6%AD%8C%E8%88%9E%E5%88%87%E7%89%87/MP3%E7%9B%B4%E6%92%AD%E6%AD%8C%E6%9B%B2%E5%88%87%E7%89%87/%E4%BF%AE%E5%A4%8D%E6%96%87%E7%89%A9/"
+VITE_PREFIX_TUNED="https://as-archive-load-balance.kzmidc.workers.dev/Normalized%20Audio%20New/%E4%BF%AE%E5%A4%8D%E6%96%87%E7%89%A9/"
 VITE_SUFFIX_TUNED="?raw"
 # # 代理配置
 # # # 原版音频
