--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lite-web-studio",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -9,7 +9,7 @@
     "format": "prettier .  --write"
   },
   "dependencies": {
-    "@vueuse/core": "^8.1.1",
+    "@vueuse/core": "^8.1.2",
     "axios": "^0.26.1",
     "bootstrap-icons": "^1.8.1",
     "csv-parse": "^5.0.4",
@@ -19,6 +19,7 @@
     "floating-vue": "^2.0.0-beta.8",
     "lodash.shuffle": "^4.2.0",
     "tua-body-scroll-lock": "^1.2.1",
+    "vite-plugin-chunk-split": "^0.0.1",
     "vue": "^3.2.31",
     "vuedraggable": "^4.1.0"
   },
@@ -31,6 +32,7 @@
     "rollup-plugin-visualizer": "^5.6.0",
     "sass": "^1.49.9",
     "vite": "^2.8.6",
+    "vite-plugin-compression": "^0.5.1",
     "vue3-eventbus": "^2.0.0"
   }
 }
