Add support fir mutiple artists search

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "dayjs": "^1.11.0",
     "dexie": "^3.2.1",
     "element-plus": "^2.1.4",
-    "floating-vue": "^2.0.0-beta.8",
+    "floating-vue": "^2.0.0-beta.11",
+    "lodash.intersection": "^4.4.0",
     "lodash.shuffle": "^4.2.0",
     "tua-body-scroll-lock": "^1.2.1",
     "vite-plugin-chunk-split": "^0.0.1",
@@ -33,7 +34,7 @@
     "rollup-plugin-visualizer": "^5.6.0",
     "sass": "^1.49.9",
     "unplugin-auto-import": "^0.6.6",
-    "unplugin-vue-components": "^0.18.3",
+    "unplugin-vue-components": "^0.18.4",
     "vite": "^2.8.6",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-radar": "^0.4.2",
