make csv db called from cdn under non-dev env

--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,8 @@
 # 音频资源前后缀配置
+
+# # DB数据库配置
+VITE_DB=""
+
 # # 直链配置
 # # # 原版音频
 VITE_PREFIX_ORIGN="https://as-archive-load-balance.kzmidc.workers.dev/Normalized%20Audio%20New/"
