--- a/.github/workflows/test-deploy-on-server.yml
+++ b/.github/workflows/test-deploy-on-server.yml
@@ -22,7 +22,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
-    - run: npm run build
+    - run: npm run build -- --mode staging
     - run: npm test
 
     - name: Install SSH Key
