update csv links to new

--- a/.env.staging
+++ b/.env.staging
@@ -1,7 +1,7 @@
 # 音频资源前后缀配置
 
 # # DB数据库配置
-VITE_DB="https://cdn.jsdelivr.net/gh/chobitsnerv/ass-db@main"
+VITE_DB=" https://csv-db.music.a-soul.fans"
 
 # 海外资源
 # # 直链配置
