--- a/.env.production
+++ b/.env.production
@@ -1,7 +1,7 @@
 # 音频资源前后缀配置
 
 # # DB数据库配置
-VITE_DB="https://cdn.jsdelivr.net/gh/chobitsnerv/ass-db@release"
+VITE_DB="https://csv-db.studio.a-soul.fans"
 
 # 海外资源
 # # 直链配置
