--- a/.env.production
+++ b/.env.production
@@ -1,7 +1,8 @@
 # 音频资源前后缀配置
 
 # # DB数据库配置
-VITE_DB="https://csv-db.studio.a-soul.fans"
+# VITE_DB="https://csv-db.studio.a-soul.fans"
+VITE_DB="https://csv-db.music.a-soul.fans"
 
 # 海外资源
 # # 直链配置
