--- a/.env.production
+++ b/.env.production
@@ -1,7 +1,7 @@
 # 音频资源前后缀配置
 
 # # DB数据库配置
-VITE_DB="https://csv-db.studio.a-soul.fans"
+VITE_DB="https://cn.csv-db.studio.asf.ink"
 
 # 海外资源
 # # 直链配置
