--- a/.env.staging
+++ b/.env.staging
@@ -24,10 +24,10 @@ VITE_SUFFIX_TUNED_DL_CDN="?raw&proxied"
 # # 直链配置
 # # # 原版音频
 VITE_PREFIX_ORIGN_CH="https://cn.as-archive.studio.asf.ink/AZCN-Sharepoint/"
-VITE_SUFFIX_ORIGN_CH="?raw"
+VITE_SUFFIX_ORIGN_CH=""
 # # # 修正音频
 VITE_PREFIX_TUNED_CH="https://cn.as-archive.studio.asf.ink/AZCN-Sharepoint/%E4%BF%AE%E5%A4%8D%E6%96%87%E7%89%A9/"
-VITE_SUFFIX_TUNED_CH="?raw"
+VITE_SUFFIX_TUNED_CH=""
 # # 代理配置
 # # # 原版音频
 VITE_PREFIX_ORIGN_DL_CDN_CH="https://as-archive-load-balance.kzmidc.workers.dev/Normalized%20Audio%20New/"
