--- a/.env.staging
+++ b/.env.staging
@@ -30,8 +30,8 @@ VITE_PREFIX_TUNED_CH="https://as-archive-azcn-0001.asf.ink/AZCN-Sharepoint/%E4%B
 VITE_SUFFIX_TUNED_CH=""
 # # 代理配置
 # # # 原版音频
-VITE_PREFIX_ORIGN_DL_CDN_CH="https://as-archive-load-balance.kzmidc.workers.dev/Normalized%20Audio%20New/"
-VITE_SUFFIX_ORIGN_DL_CDN_CH="?raw&proxied"
+VITE_PREFIX_ORIGN_DL_CDN_CH="https://as-archive-azcn-0001.asf.ink/MS-GLOBAL-KNaiFen/Normalized%20Audio%20New/"
+VITE_SUFFIX_ORIGN_DL_CDN_CH=""
 # # # 修正音频
-VITE_PREFIX_TUNED_DL_CDN_CH="https://as-archive-load-balance.kzmidc.workers.dev/Normalized%20Audio%20New/%E4%BF%AE%E5%A4%8D%E6%96%87%E7%89%A9/"
-VITE_SUFFIX_TUNED_DL_CDN_CH="?raw&proxied"
+VITE_PREFIX_TUNED_DL_CDN_CH="http://as-archive-azcn-0001.asf.ink/MS-GLOBAL-KNaiFen/Normalized%20Audio%20New/%E4%BF%AE%E5%A4%8D%E6%96%87%E7%89%A9/"
+VITE_SUFFIX_TUNED_DL_CDN_CH=""
