--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
+    "preview": "vite preview --host",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
-    "format": "prettier .  --write"
+    "format": "prettier .  --write",
+    "genimg":"node ./scripts/img-generator.mjs"
   },
   "dependencies": {
     "@vueuse/core": "^8.2.6",
@@ -29,6 +30,7 @@
     "@iconify-json/ic": "^1.1.2",
     "@iconify-json/ion": "^1.1.1",
     "@vitejs/plugin-vue": "^2.3.1",
+    "convert-svg-to-png": "^0.6.4",
     "eslint": "^8.13.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
@@ -41,6 +43,7 @@
     "unplugin-vue-components": "^0.19.3",
     "vite": "^2.9.5",
     "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-pwa": "^0.12.3",
     "vite-plugin-radar": "^0.4.2",
     "vue3-eventbus": "^2.0.0"
   }
