--- a/.env.production
+++ b/.env.production
@@ -8,32 +8,32 @@ VITE_DB="https://csv-db.studio.asf.ink"
 # 海外资源
 # # 直链配置
 # # # 原版音频
-VITE_PREFIX_ORIGN="https://as-archive-azcn-0001.asf.ink/MS-GLOBAL-KNaiFen/Normalized%20Audio%20New/"
+VITE_PREFIX_ORIGN="https://storage.wildfire.cool/d/A-SOUL%20STUDIO%20AUDIO%20REPO/AZGLOBAL-NFG/Normalized%20Audio%20New/"
 VITE_SUFFIX_ORIGN=""
 # # # 修正音频
-VITE_PREFIX_TUNED="https://as-archive-azcn-0001.asf.ink/MS-GLOBAL-KNaiFen/Normalized%20Audio%20New/%E4%BF%AE%E5%A4%8D%E6%96%87%E7%89%A9/"
+VITE_PREFIX_TUNED="https://storage.wildfire.cool/d/A-SOUL%20STUDIO%20AUDIO%20REPO/AZGLOBAL-NFG/Normalized%20Audio%20New/%E4%BF%AE%E5%A4%8D%E6%96%87%E7%89%A9/"
 VITE_SUFFIX_TUNED=""
 # # 代理配置
 # # # 原版音频
-VITE_PREFIX_ORIGN_DL_CDN="https://as-archive-azcn-0001.asf.ink/MS-GLOBAL-KNaiFen/Normalized%20Audio%20New/"
+VITE_PREFIX_ORIGN_DL_CDN="https://storage.wildfire.cool/d/A-SOUL%20STUDIO%20AUDIO%20REPO/AZGLOBAL-NFG/Normalized%20Audio%20New/"
 VITE_SUFFIX_ORIGN_DL_CDN=""
 # # # 修正音频
-VITE_PREFIX_TUNED_DL_CDN="https://as-archive-azcn-0001.asf.ink/MS-GLOBAL-KNaiFen/Normalized%20Audio%20New/%E4%BF%AE%E5%A4%8D%E6%96%87%E7%89%A9/"
+VITE_PREFIX_TUNED_DL_CDN="https://storage.wildfire.cool/d/A-SOUL%20STUDIO%20AUDIO%20REPO/AZGLOBAL-NFG/Normalized%20Audio%20New/%E4%BF%AE%E5%A4%8D%E6%96%87%E7%89%A9/"
 VITE_SUFFIX_TUNED_DL_CDN=""
 
 
 # 国内资源
 # # 直链配置
 # # # 原版音频
-VITE_PREFIX_ORIGN_CH="https://as-archive-azcn-0001.asf.ink/AZCN-Sharepoint/"
+VITE_PREFIX_ORIGN_CH="https://storage.wildfire.cool/d/A-SOUL%20STUDIO%20AUDIO%20REPO/AZCN-Sharepoint/"
 VITE_SUFFIX_ORIGN_CH=""
 # # # 修正音频
-VITE_PREFIX_TUNED_CH="https://as-archive-azcn-0001.asf.ink/AZCN-Sharepoint/%E4%BF%AE%E5%A4%8D%E6%96%87%E7%89%A9/"
+VITE_PREFIX_TUNED_CH="https://storage.wildfire.cool/d/A-SOUL%20STUDIO%20AUDIO%20REPO/AZCN-Sharepoint/%E4%BF%AE%E5%A4%8D%E6%96%87%E7%89%A9/"
 VITE_SUFFIX_TUNED_CH=""
 # # 代理配置
 # # # 原版音频
-VITE_PREFIX_ORIGN_DL_CDN_CH="https://as-archive-azcn-0001.asf.ink/MS-GLOBAL-KNaiFen/Normalized%20Audio%20New/"
+VITE_PREFIX_ORIGN_DL_CDN_CH="https://storage.wildfire.cool/d/A-SOUL%20STUDIO%20AUDIO%20REPO/AZGLOBAL-NFG/Normalized%20Audio%20New/"
 VITE_SUFFIX_ORIGN_DL_CDN_CH=""
 # # # 修正音频
-VITE_PREFIX_TUNED_DL_CDN_CH="https://as-archive-azcn-0001.asf.ink/MS-GLOBAL-KNaiFen/Normalized%20Audio%20New/%E4%BF%AE%E5%A4%8D%E6%96%87%E7%89%A9/"
+VITE_PREFIX_TUNED_DL_CDN_CH="https://storage.wildfire.cool/d/A-SOUL%20STUDIO%20AUDIO%20REPO/AZGLOBAL-NFG/Normalized%20Audio%20New/%E4%BF%AE%E5%A4%8D%E6%96%87%E7%89%A9/"
 VITE_SUFFIX_TUNED_DL_CDN_CH=""
