--- a/.env.staging
+++ b/.env.staging
@@ -2,7 +2,7 @@
 
 # # DB数据库配置
 
-VITE_DB="https://asoul.csv.dev.vtb.studio"
+VITE_DB="https://asoul.csv.vtb.studio"
 
 
 # 海外资源
@@ -18,17 +18,17 @@ VITE_SUFFIX_TUNED=""
 VITE_PREFIX_ORIGN_DL_CDN="https://alist.vtb.link/d/AZGLOBAL/NFG/AS/Normalized%20Audio%20New/"
 VITE_SUFFIX_ORIGN_DL_CDN=""
 # # # 修正音频
-VITE_PREFIX_TUNED_DL_CDN="https://alist.vtb.link/d/AZGLOBAL/NFG/AS/Normalized%20Audio%20New//%E4%BF%AE%E5%A4%8D%E6%96%87%E7%89%A9/"
+VITE_PREFIX_TUNED_DL_CDN="https://alist.vtb.link/d/AZGLOBAL/NFG/AS/Normalized%20Audio%20New/%E4%BF%AE%E5%A4%8D%E6%96%87%E7%89%A9/"
 VITE_SUFFIX_TUNED_DL_CDN=""
 
 
 # 国内资源
 # # 直链配置
 # # # 原版音频
-VITE_PREFIX_ORIGN_CH="https://alist.vtb.link/d/AZCN/AS-Site/AS/Audio_files_new/"
+VITE_PREFIX_ORIGN_CH="https://alist.vtb.link/d/AZGLOBAL/NFG/AS/Normalized%20Audio%20New/"
 VITE_SUFFIX_ORIGN_CH=""
 # # # 修正音频
-VITE_PREFIX_TUNED_CH="https://alist.vtb.link/d/AZCN/AS-Site/AS/Audio_files_new/%E4%BF%AE%E5%A4%8D%E6%96%87%E7%89%A9/"
+VITE_PREFIX_TUNED_CH="https://alist.vtb.link/d/AZGLOBAL/NFG/AS/Normalized%20Audio%20New/%E4%BF%AE%E5%A4%8D%E6%96%87%E7%89%A9/"
 VITE_SUFFIX_TUNED_CH=""
 # # 代理配置
 # # # 原版音频
