--- a/.github/workflows/azure-staticwebapps.yml
+++ b/.github/workflows/azure-staticwebapps.yml
@@ -4,10 +4,10 @@ on:
   push:
     branches:
       - release
-  pull_request:
-    types: [synchronize, closed]
-    branches:
-      - release
+#   pull_request:
+#     types: [synchronize, closed]
+#     branches:
+#       - release
 
 jobs:
   build_and_deploy_job:
